fixed card button alignment chea!

--- a/style2.css
+++ b/style2.css
@@ -13,7 +13,7 @@ html {
     background-color:rgba(1, 8, 12, 1);
 }
 
-body, p {
+body, p, h1, h2, h3 {
     margin: 0;
 }
 
@@ -62,6 +62,7 @@ body, p {
     display:flex;
     flex-direction:column;
  }
+
 
 /*ELEMENTS*/
 
@@ -188,6 +189,7 @@ body, p {
     justify-content: center;
     object-fit: cover;
     width:100%;
+    height:250px;
     border-radius: 24px 24px 0 0;
     border-bottom: 4px solid #253034;
 }
@@ -196,6 +198,7 @@ body, p {
     display:flex;
     flex-direction:column;
     margin: 24px 24px 32px 24px;
+    gap:16px;
 }
 
 .card__headline {
@@ -212,13 +215,14 @@ body, p {
 
 .card__actions{
     display:flex;
+    flex-grow:1;
     justify-content: flex-end;
     margin: 0 16px 16px;
 
 }
 
 .card__button {
-    align-self:flex-start;
+    align-self:flex-end;
     color:#55D8EA;
     border: 4px solid #55d8ea;
     padding:10px 24px;
